--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                     <div class="title">
                         <p class="txt-2 nunito txt-center">Les apprenants de la formation</p>
                     </div>
+
+                    <!-- Student-box -->
                     <div class="students-box ">
                         <div class="student-box pb-4 shadow-gray">
                             <div class="student-img-container">
@@ -69,6 +71,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Student-box-end -->
                 </div>
             </div>
         </div>
